--- a/source/catalog.html
+++ b/source/catalog.html
@@ -178,7 +178,7 @@
           <a class="social__link social__link--vkontakte" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span></a>
+          <a class="social__link social__link--vkontakte" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграм</span></a>
         </li>
       </ul>
     </div>
