Исправляет код по линтерам

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,79 +33,79 @@
       <div class="catalog__wrapper">
         <ul class="catalog__list">
           <li class="catalog__item">
-            <img class="catalog__image" src="#" alt="Cat Energy PRO 500 г">
+            <img class="catalog__image" src="#" width="68" height="86" alt="Cat Energy PRO 500 г">
             <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
               <li class="catalog__item-info">Вкус <span>Курица</span></li>
               <li class="catalog__item-info">Цена <span>700 р</span></li>
             </ul>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" alt="Cat Energy PRO 1000 г">
+            <img class="catalog__image" src="#" width="84" height="100" alt="Cat Energy PRO 1000 г">
             <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>1000 г</span></li>
               <li class="catalog__item-info">Вкус <span>Курица</span></li>
               <li class="catalog__item-info">Цена <span>1000 ₽</span></li>
             </ul>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" alt="Cat Energy PRO 500 г">
+            <img class="catalog__image" src="#" width="68" height="78" alt="Cat Energy PRO 500 г">
             <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
               <li class="catalog__item-info">Вкус <span>Рыба</span></li>
               <li class="catalog__item-info">Цена <span>700 р</span></li>
             </ul>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" alt="Cat Energy PRO 1000 г">
+            <img class="catalog__image" src="#" width="84" height="100" alt="Cat Energy PRO 1000 г">
             <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>1000 г</span></li>
               <li class="catalog__item-info">Вкус <span>Рыба</span></li>
               <li class="catalog__item-info">Цена <span>1000 ₽</span></li>
             </ul>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" alt="Cat Energy SLIM 500 г">
+            <img class="catalog__image" src="#" width="68" height="78" alt="Cat Energy SLIM 500 г">
             <h3 class="catalog__title">Cat Energy SLIM 500 г</h3>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
               <li class="catalog__item-info">Вкус <span>Гречка</span></li>
               <li class="catalog__item-info">Цена <span>400 ₽</span></li>
             </ul>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" alt="Cat Energy SLIM 1000 г">
+            <img class="catalog__image" src="#" width="84" height="100" alt="Cat Energy SLIM 1000 г">
             <h3 class="catalog__title">Cat Energy SLIM 1000 г</h3>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>1000 г</span></li>
               <li class="catalog__item-info">Вкус <span>Гречка</span></li>
               <li class="catalog__item-info">Цена <span>700 ₽</span></li>
             </ul>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" alt="Cat Energy SLIM 500 г">
+            <img class="catalog__image" src="#" width="72" height="84" alt="Cat Energy SLIM 500 г">
             <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
               <li class="catalog__item-info">Вкус <span>Рис</span></li>
               <li class="catalog__item-info">Цена <span>500 ₽</span></li>
             </ul>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
             <h3 class="catalog__title">Показать еще 100500 товаров</h3>
             <p class="catalog__text">На самом деле вкусов гораздо больше!</p>
-            <button class="catalog__button button button__secondary" type="button">Показать все</button>
+            <a class="catalog__button button button-secondary" href="#">Показать все</a>
           </li>
         </ul>
       </div>
@@ -118,25 +118,25 @@
             <h3 class="catalog-additionally__caption">Сахарозаменитель</h3>
             <p class="catalog-additionally__text">1 упаковка (100 г)</p>
             <p class="catalog-additionally__text">200 ₽</p>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog-additionally__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog-additionally__item">
             <h3 class="catalog-additionally__caption">Питьевая вода</h3>
             <p class="catalog-additionally__text">5 литров</p>
             <p class="catalog-additionally__text">50 ₽</p>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog-additionally__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog-additionally__item">
             <h3 class="catalog-additionally__caption">Молоко</h3>
             <p class="catalog-additionally__text">1 литр</p>
             <p class="catalog-additionally__text">100 ₽</p>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog-additionally__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog-additionally__item">
             <h3 class="catalog-additionally__caption">Витамины</h3>
             <p class="catalog-additionally__text">1 упаковка (30 г)</p>
             <p class="catalog-additionally__text">300 ₽</p>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog-additionally__button button-primary" href="#">Заказать</a>
           </li>
         </ul>
         <div class="catalog-additionally_gift gift">
