--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
       <div class="promo__wrapper">
         <h2 class="promo__title">Функциональное питание для котов</h2>
         <p class="promo__slogan">Занялся собой? Займись котом!</p>
-        <a class="promo__button button__primary" href="#">Подобрать программу</a>
+        <a class="promo__button button-primary" href="#">Подобрать программу</a>
       </div>
     </section>
     <section class="programs">
@@ -75,18 +75,18 @@
       <div class="example__wrapper">
         <h2 class="example__title">Живой пример</h2>
         <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <div class="stats__container">
-          <dl class="stats__list">
-            <div class="stats__item">
-              <dt class="stats__number">5 кг</dt>
-              <dd class="stats__text">Снижение веса</dd>
+        <div class="example__container">
+          <dl class="example__list">
+            <div class="example__item">
+              <dt class="example__number">5 кг</dt>
+              <dd class="example__text">Снижение веса</dd>
             </div>
-            <div class="stats__item">
-              <dt class="stats__number">60 дней</dt>
-              <dd class="stats__text">Затрачено времени</dd>
+            <div class="example__item">
+              <dt class="example__number">60 дней</dt>
+              <dd class="example__text">Затрачено времени</dd>
             </div>
           </dl>
-          <p class="stats__description">Затраты на питание: 15 000 руб.</p>
+          <p class="example__comment">Затраты на питание: 15 000 руб.</p>
         </div>
         <div class="example__slider"></div>
       </div>
