Добавляет исправления после лайва

--- a/source/index.html
+++ b/source/index.html
@@ -11,21 +11,21 @@
 
 <body class="page__body">
   <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <img src="234" width="234" height="234" alt="CAT ENERGY">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
-      <div class="main-nav__wrapper">
+    <div class="main-header__wrapper">
+      <a class="main-header__logo" href="index.html">
+        <img src="#" width="174" height="50" alt="CAT ENERGY">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--current"><a href="#">Главная</a></li>
           <li class="main-nav__item"><a href="catalog.html">Каталог продукции</a></li>
           <li class="main-nav__item"><a href="#">Подбор программы</a></li>
         </ul>
-      </div>
-    </nav>
+      </nav>
+    </div>
   </header>
   <main class="main-container">
     <h1 class="visually-hidden">«Кэт энерджи» подбор функциональной программы питания для котов</h1>
@@ -102,24 +102,28 @@
     </section>
   </main>
   <footer class="main-footer">
-    <div class="main-footer__logo logo">
-      <a class="logo__link" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span></a>
-    </div>
-    <div class="main-footer__social social">
-      <ul class="social-list">
-        <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span></a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span></a>
-        </li>
-      </ul>
-    </div>
-    <div class="main-footer__copyright copyright">
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">«HTML Academy»</span></a>
+    <div class="main-footer__wrapper">
+      <div class="main-footer__logo logo">
+        <a class="logo__link" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span></a>
+      </div>
+      <div class="main-footer__social social">
+        <ul class="social-list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span></a>
+          </li>
+        </ul>
+      </div>
+      <div class="main-footer__copyright copyright">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="copyright__text">«HTML Academy»</span>
+        </a>
+      </div>
     </div>
   </footer>
 </body>
