--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,26 +11,26 @@
 
 <body class="page__body">
   <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <img src="234" width="234" height="234" alt="CAT ENERGY">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
-      <div class="main-nav__wrapper">
+    <div class="main-header__wrapper">
+      <a class="main-header__logo" href="index.html">
+        <img src="234" width="234" height="234" alt="CAT ENERGY">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
         <ul class="main-nav__list">
           <li class="main-nav__item"><a href="index.html">Главная</a></li>
           <li class="main-nav__item main-nav__item--current"><a href="#">Каталог продукции</a></li>
           <li class="main-nav__item"><a href="#">Подбор программы</a></li>
         </ul>
-      </div>
-    </nav>
+      </nav>
+    </div>
   </header>
   <main class="main-container">
     <section class="catalog">
-      <h1 class="catalog__title">Каталог продукции</h1>
       <div class="catalog__wrapper">
+        <h1 class="catalog__title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item">
             <img class="catalog__image" src="#" width="68" height="86" alt="Cat Energy PRO 500 г">
@@ -111,8 +111,8 @@
       </div>
     </section>
     <section class="catalog-additionally">
-      <h2 class="catalog-additionally__title">Дополнительные товары</h2>
       <div class="catalog-additionally__wrapper">
+        <h2 class="catalog-additionally__title">Дополнительные товары</h2>
         <ul class="catalog-additionally__list">
           <li class="catalog-additionally__item">
             <h3 class="catalog-additionally__caption">Сахарозаменитель</h3>
@@ -145,8 +145,8 @@
       </div>
     </section>
     <section class="subscribe">
-      <h2 class="subscribe__title">Акции и новинки</h2>
       <div class="subscribe__wrapper">
+        <h2 class="subscribe__title">Акции и новинки</h2>
         <p class="subscribe__description">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
         <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="subscribe__label" for="subscribe-email" hidden>Email</label>
@@ -166,24 +166,26 @@
     </section>
   </main>
   <footer class="main-footer">
-    <div class="main-footer__logo logo">
-      <a class="logo__link" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span></a>
-    </div>
-    <div class="main-footer__social social">
-      <ul class="social-list">
-        <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span></a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span></a>
-        </li>
-      </ul>
-    </div>
-    <div class="main-footer__copyright copyright">
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">«HTML Academy»</span></a>
+    <div class="main-footer__wrapper">
+      <div class="main-footer__logo logo">
+        <a class="logo__link" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span></a>
+      </div>
+      <div class="main-footer__social social">
+        <ul class="social-list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span></a>
+          </li>
+        </ul>
+      </div>
+      <div class="main-footer__copyright copyright">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">«HTML Academy»</span></a>
+      </div>
     </div>
   </footer>
 </body>
