Добавляет исправления по правкам

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,8 +33,10 @@
         <h1 class="catalog__title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item">
-            <img class="catalog__image" src="#" width="68" height="86" alt="Cat Energy PRO 500 г">
-            <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="#" width="68" height="86" alt="Cat Energy PRO 500 г">
+              <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+            </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
               <li class="catalog__item-info">Вкус <span>Курица</span></li>
@@ -43,8 +45,10 @@
             <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" width="84" height="100" alt="Cat Energy PRO 1000 г">
-            <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="#" width="84" height="100" alt="Cat Energy PRO 1000 г">
+              <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
+            </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>1000 г</span></li>
               <li class="catalog__item-info">Вкус <span>Курица</span></li>
@@ -53,8 +57,10 @@
             <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" width="68" height="78" alt="Cat Energy PRO 500 г">
-            <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="#" width="68" height="78" alt="Cat Energy PRO 500 г">
+              <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+            </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
               <li class="catalog__item-info">Вкус <span>Рыба</span></li>
@@ -63,8 +69,10 @@
             <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" width="84" height="100" alt="Cat Energy PRO 1000 г">
-            <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="#" width="84" height="100" alt="Cat Energy PRO 1000 г">
+              <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
+            </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>1000 г</span></li>
               <li class="catalog__item-info">Вкус <span>Рыба</span></li>
@@ -73,8 +81,10 @@
             <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" width="68" height="78" alt="Cat Energy SLIM 500 г">
-            <h3 class="catalog__title">Cat Energy SLIM 500 г</h3>
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="#" width="68" height="78" alt="Cat Energy SLIM 500 г">
+              <h3 class="catalog__title">Cat Energy SLIM 500 г</h3>
+            </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
               <li class="catalog__item-info">Вкус <span>Гречка</span></li>
@@ -83,8 +93,10 @@
             <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" width="84" height="100" alt="Cat Energy SLIM 1000 г">
-            <h3 class="catalog__title">Cat Energy SLIM 1000 г</h3>
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="#" width="84" height="100" alt="Cat Energy SLIM 1000 г">
+              <h3 class="catalog__title">Cat Energy SLIM 1000 г</h3>
+            </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>1000 г</span></li>
               <li class="catalog__item-info">Вкус <span>Гречка</span></li>
@@ -93,8 +105,10 @@
             <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" width="72" height="84" alt="Cat Energy SLIM 500 г">
-            <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="#" width="72" height="84" alt="Cat Energy SLIM 500 г">
+              <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+            </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
               <li class="catalog__item-info">Вкус <span>Рис</span></li>
@@ -103,7 +117,9 @@
             <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <h3 class="catalog__title">Показать еще 100500 товаров</h3>
+            <a class="catalog__link" href="#">
+              <h3 class="catalog__title">Показать еще 100500 товаров</h3>
+            </a>
             <p class="catalog__text">На самом деле вкусов гораздо больше!</p>
             <a class="catalog__button button button-secondary" href="#">Показать все</a>
           </li>
@@ -167,25 +183,24 @@
   </main>
   <footer class="main-footer">
     <div class="main-footer__wrapper">
-      <div class="main-footer__logo logo">
-        <a class="logo__link" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span></a>
-      </div>
-      <div class="main-footer__social social">
-        <ul class="social-list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span></a>
-          </li>
-        </ul>
-      </div>
-      <div class="main-footer__copyright copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">«HTML Academy»</span></a>
-      </div>
+      <a class="logo__link" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span></a>
+      <ul class="social-list">
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Мы в Вконтакте</span></a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">Мы в Ютубе</span></a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Мы в Телеграме</span></a>
+        </li>
+      </ul>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="copyright__text">«HTML Academy»</span>
+      </a>
     </div>
   </footer>
 </body>
