--- a/source/index.html
+++ b/source/index.html
@@ -103,27 +103,24 @@
   </main>
   <footer class="main-footer">
     <div class="main-footer__wrapper">
-      <div class="main-footer__logo logo">
-        <a class="logo__link" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span></a>
-      </div>
-      <div class="main-footer__social social">
-        <ul class="social-list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span></a>
-          </li>
-        </ul>
-      </div>
-      <div class="main-footer__copyright copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <span class="copyright__text">«HTML Academy»</span>
-        </a>
-      </div>
+      <a class="logo__link" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span></a>
+      <ul class="social-list">
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Мы в Вконтакте</span></a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">Мы в Ютубе</span></a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Мы в Телеграме</span></a>
+        </li>
+      </ul>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="copyright__text">«HTML Academy»</span>
+      </a>
     </div>
   </footer>
 </body>
