--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,132 +11,148 @@
 
 <body class="page__body">
   <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <img src="234" width="234" height="234" alt="CAT ENERGY">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
-      <div class="main-nav__wrapper">
+    <div class="main-header__wrapper">
+      <a class="main-header__logo" href="index.html">
+        <img src="234" width="234" height="234" alt="CAT ENERGY">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
         <ul class="main-nav__list">
           <li class="main-nav__item"><a href="index.html">Главная</a></li>
           <li class="main-nav__item main-nav__item--current"><a href="#">Каталог продукции</a></li>
           <li class="main-nav__item"><a href="#">Подбор программы</a></li>
         </ul>
-      </div>
-    </nav>
+      </nav>
+    </div>
   </header>
   <main class="main-container">
     <section class="catalog">
-      <h1 class="catalog__title">Каталог продукции</h1>
       <div class="catalog__wrapper">
+        <h1 class="catalog__title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item">
-            <img class="catalog__image" src="#" alt="Cat Energy PRO 500 г">
-            <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="#" width="68" height="86" alt="Cat Energy PRO 500 г">
+              <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+            </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
               <li class="catalog__item-info">Вкус <span>Курица</span></li>
               <li class="catalog__item-info">Цена <span>700 р</span></li>
             </ul>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" alt="Cat Energy PRO 1000 г">
-            <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="#" width="84" height="100" alt="Cat Energy PRO 1000 г">
+              <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
+            </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>1000 г</span></li>
               <li class="catalog__item-info">Вкус <span>Курица</span></li>
               <li class="catalog__item-info">Цена <span>1000 ₽</span></li>
             </ul>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" alt="Cat Energy PRO 500 г">
-            <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="#" width="68" height="78" alt="Cat Energy PRO 500 г">
+              <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+            </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
               <li class="catalog__item-info">Вкус <span>Рыба</span></li>
               <li class="catalog__item-info">Цена <span>700 р</span></li>
             </ul>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" alt="Cat Energy PRO 1000 г">
-            <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="#" width="84" height="100" alt="Cat Energy PRO 1000 г">
+              <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
+            </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>1000 г</span></li>
               <li class="catalog__item-info">Вкус <span>Рыба</span></li>
               <li class="catalog__item-info">Цена <span>1000 ₽</span></li>
             </ul>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" alt="Cat Energy SLIM 500 г">
-            <h3 class="catalog__title">Cat Energy SLIM 500 г</h3>
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="#" width="68" height="78" alt="Cat Energy SLIM 500 г">
+              <h3 class="catalog__title">Cat Energy SLIM 500 г</h3>
+            </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
               <li class="catalog__item-info">Вкус <span>Гречка</span></li>
               <li class="catalog__item-info">Цена <span>400 ₽</span></li>
             </ul>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" alt="Cat Energy SLIM 1000 г">
-            <h3 class="catalog__title">Cat Energy SLIM 1000 г</h3>
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="#" width="84" height="100" alt="Cat Energy SLIM 1000 г">
+              <h3 class="catalog__title">Cat Energy SLIM 1000 г</h3>
+            </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>1000 г</span></li>
               <li class="catalog__item-info">Вкус <span>Гречка</span></li>
               <li class="catalog__item-info">Цена <span>700 ₽</span></li>
             </ul>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <img class="catalog__image" src="#" alt="Cat Energy SLIM 500 г">
-            <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="#" width="72" height="84" alt="Cat Energy SLIM 500 г">
+              <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+            </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
               <li class="catalog__item-info">Вкус <span>Рис</span></li>
               <li class="catalog__item-info">Цена <span>500 ₽</span></li>
             </ul>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <h3 class="catalog__title">Показать еще 100500 товаров</h3>
+            <a class="catalog__link" href="#">
+              <h3 class="catalog__title">Показать еще 100500 товаров</h3>
+            </a>
             <p class="catalog__text">На самом деле вкусов гораздо больше!</p>
-            <button class="catalog__button button button__secondary" type="button">Показать все</button>
+            <a class="catalog__button button button-secondary" href="#">Показать все</a>
           </li>
         </ul>
       </div>
     </section>
     <section class="catalog-additionally">
-      <h2 class="catalog-additionally__title">Дополнительные товары</h2>
       <div class="catalog-additionally__wrapper">
+        <h2 class="catalog-additionally__title">Дополнительные товары</h2>
         <ul class="catalog-additionally__list">
           <li class="catalog-additionally__item">
             <h3 class="catalog-additionally__caption">Сахарозаменитель</h3>
             <p class="catalog-additionally__text">1 упаковка (100 г)</p>
             <p class="catalog-additionally__text">200 ₽</p>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog-additionally__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog-additionally__item">
             <h3 class="catalog-additionally__caption">Питьевая вода</h3>
             <p class="catalog-additionally__text">5 литров</p>
             <p class="catalog-additionally__text">50 ₽</p>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog-additionally__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog-additionally__item">
             <h3 class="catalog-additionally__caption">Молоко</h3>
             <p class="catalog-additionally__text">1 литр</p>
             <p class="catalog-additionally__text">100 ₽</p>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog-additionally__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog-additionally__item">
             <h3 class="catalog-additionally__caption">Витамины</h3>
             <p class="catalog-additionally__text">1 упаковка (30 г)</p>
             <p class="catalog-additionally__text">300 ₽</p>
-            <button class="catalog__button button" type="button">Заказать</button>
+            <a class="catalog-additionally__button button-primary" href="#">Заказать</a>
           </li>
         </ul>
         <div class="catalog-additionally_gift gift">
@@ -145,8 +161,8 @@
       </div>
     </section>
     <section class="subscribe">
-      <h2 class="subscribe__title">Акции и новинки</h2>
       <div class="subscribe__wrapper">
+        <h2 class="subscribe__title">Акции и новинки</h2>
         <p class="subscribe__description">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
         <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="subscribe__label" for="subscribe-email" hidden>Email</label>
@@ -166,24 +182,25 @@
     </section>
   </main>
   <footer class="main-footer">
-    <div class="main-footer__logo logo">
+    <div class="main-footer__wrapper">
       <a class="logo__link" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span></a>
-    </div>
-    <div class="main-footer__social social">
       <ul class="social-list">
         <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
+          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Мы в Вконтакте</span></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span></a>
+          <a class="social__link social__link--vkontakte" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">Мы в Ютубе</span></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span></a>
+          <a class="social__link social__link--vkontakte" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Мы в Телеграме</span></a>
         </li>
       </ul>
-    </div>
-    <div class="main-footer__copyright copyright">
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">«HTML Academy»</span></a>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="copyright__text">«HTML Academy»</span>
+      </a>
     </div>
   </footer>
 </body>
