--- a/source/index.html
+++ b/source/index.html
@@ -11,21 +11,21 @@
 
 <body class="page__body">
   <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <img src="234" width="234" height="234" alt="CAT ENERGY">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
-      <div class="main-nav__wrapper">
+    <div class="main-header__wrapper">
+      <a class="main-header__logo" href="index.html">
+        <img src="#" width="174" height="50" alt="CAT ENERGY">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--current"><a href="#">Главная</a></li>
           <li class="main-nav__item"><a href="catalog.html">Каталог продукции</a></li>
           <li class="main-nav__item"><a href="#">Подбор программы</a></li>
         </ul>
-      </div>
-    </nav>
+      </nav>
+    </div>
   </header>
   <main class="main-container">
     <h1 class="visually-hidden">«Кэт энерджи» подбор функциональной программы питания для котов</h1>
@@ -33,7 +33,7 @@
       <div class="promo__wrapper">
         <h2 class="promo__title">Функциональное питание для котов</h2>
         <p class="promo__slogan">Занялся собой? Займись котом!</p>
-        <a class="promo__button button__primary" href="#">Подобрать программу</a>
+        <a class="promo__button button-primary" href="#">Подобрать программу</a>
       </div>
     </section>
     <section class="programs">
@@ -75,18 +75,18 @@
       <div class="example__wrapper">
         <h2 class="example__title">Живой пример</h2>
         <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <div class="stats__container">
-          <dl class="stats__list">
-            <div class="stats__item">
-              <dt class="stats__number">5 кг</dt>
-              <dd class="stats__text">Снижение веса</dd>
+        <div class="example__container">
+          <dl class="example__list">
+            <div class="example__item">
+              <dt class="example__number">5 кг</dt>
+              <dd class="example__text">Снижение веса</dd>
             </div>
-            <div class="stats__item">
-              <dt class="stats__number">60 дней</dt>
-              <dd class="stats__text">Затрачено времени</dd>
+            <div class="example__item">
+              <dt class="example__number">60 дней</dt>
+              <dd class="example__text">Затрачено времени</dd>
             </div>
           </dl>
-          <p class="stats__description">Затраты на питание: 15 000 руб.</p>
+          <p class="example__comment">Затраты на питание: 15 000 руб.</p>
         </div>
         <div class="example__slider"></div>
       </div>
@@ -102,24 +102,25 @@
     </section>
   </main>
   <footer class="main-footer">
-    <div class="main-footer__logo logo">
+    <div class="main-footer__wrapper">
       <a class="logo__link" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span></a>
-    </div>
-    <div class="main-footer__social social">
       <ul class="social-list">
         <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
+          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Мы в Вконтакте</span></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span></a>
+          <a class="social__link social__link--vkontakte" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">Мы в Ютубе</span></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span></a>
+          <a class="social__link social__link--vkontakte" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Мы в Телеграме</span></a>
         </li>
       </ul>
-    </div>
-    <div class="main-footer__copyright copyright">
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">«HTML Academy»</span></a>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="copyright__text">«HTML Academy»</span>
+      </a>
     </div>
   </footer>
 </body>
