--- a/source/catalog.html
+++ b/source/catalog.html
@@ -183,7 +183,8 @@
   </main>
   <footer class="main-footer">
     <div class="main-footer__wrapper">
-      <a class="logo__link" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span></a>
+      <a class="logo__link" href="index.html">
+        <span class="visually-hidden">«Кэт энерджи»</span></a>
       <ul class="social-list">
         <li class="social__item">
           <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
