--- a/source/catalog.html
+++ b/source/catalog.html
@@ -185,7 +185,7 @@
     <div class="main-footer__wrapper">
       <a class="logo__link" href="index.html">
         <span class="visually-hidden">«Кэт энерджи»</span></a>
-      <ul class="social-list">
+      <ul class="main-footer__list">
         <li class="social__item">
           <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Мы в Вконтакте</span></a>
