Добавляет базовую стилизацию при помощи препроцессоров

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -52,7 +52,7 @@
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-chicken500-tablet@1x.png 1x, images/products/card-chicken500-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-chicken500-mobile@1x.png" srcset="images/products/card-chicken500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 500 г со вкусом курицы">
               </picture>
-              <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+              <h3 class="catalog__caption">Cat Energy PRO 500 г</h3>
             </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
@@ -68,7 +68,7 @@
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-chicken1000-tablet@1x.png 1x, images/products/card-chicken1000-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-chicken1000-mobile@1x.png" srcset="images/products/card-chicken1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 1000 г со вкусом курицы">
               </picture>
-              <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
+              <h3 class="catalog__caption">Cat Energy PRO 1000 г</h3>
             </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>1000 г</span></li>
@@ -84,7 +84,7 @@
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-fish500-tablet@1x.png 1x, images/products/card-fish500-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-fish500-mobile@1x.png" srcset="images/products/card-fish500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 500 г со вкусом рыбы">
               </picture>
-              <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+              <h3 class="catalog__caption">Cat Energy PRO 500 г</h3>
             </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
@@ -100,7 +100,7 @@
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-fish1000-tablet@1x.png 1x, images/products/card-fish1000-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-fish1000-mobile@1x.png" srcset="images/products/card-fish1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 1000 г со вкусом рыбы">
               </picture>
-              <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
+              <h3 class="catalog__caption">Cat Energy PRO 1000 г</h3>
             </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>1000 г</span></li>
@@ -116,7 +116,7 @@
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-buckwheat500-tablet@1x.png 1x, images/products/card-buckwheat500-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-buckwheat500-mobile@1x.png" srcset="images/products/card-buckwheat500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy SLIM 500 г со вкусом гречки">
               </picture>
-              <h3 class="catalog__title">Cat Energy SLIM 500 г</h3>
+              <h3 class="catalog__caption">Cat Energy SLIM 500 г</h3>
             </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
@@ -132,7 +132,7 @@
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-buckwheat1000-tablet@1x.png 1x, images/products/card-buckwheat1000-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-buckwheat1000-mobile@1x.png" srcset="images/products/card-buckwheat1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy SLIM 1000 г со вкусом гречки">
               </picture>
-              <h3 class="catalog__title">Cat Energy SLIM 1000 г</h3>
+              <h3 class="catalog__caption">Cat Energy SLIM 1000 г</h3>
             </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>1000 г</span></li>
@@ -148,7 +148,7 @@
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-rice500-tablet@1x.png 1x, images/products/card-rice500-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-rice500-mobile@1x.png" srcset="images/products/card-rice500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy SLIM 500 г со вкусом риса">
               </picture>
-              <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
+              <h3 class="catalog__caption">Cat Energy PRO 500 г</h3>
             </a>
             <ul class="catalog__list-info">
               <li class="catalog__item-info">Масса <span>500 г</span></li>
@@ -157,9 +157,9 @@
             </ul>
             <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item catalog__item--more">
             <a class="catalog__link" href="#">
-              <h3 class="catalog__title">Показать еще 100500 товаров</h3>
+              <h3 class="catalog__caption">Показать еще 100500 товаров</h3>
             </a>
             <p class="catalog__text">На самом деле вкусов гораздо больше!</p>
             <a class="catalog__button button button-secondary" href="#">Показать все</a>
@@ -196,8 +196,8 @@
             <a class="catalog-additionally__button button-primary" href="#">Заказать</a>
           </li>
         </ul>
-        <div class="catalog-additionally_gift gift">
-          <p class="gift-description">Закажите все и получите чехол для кота в подарок!</p>
+        <div class="catalog-additionally__gift">
+          <p class="catalog-additionally__description">Закажите все и получите чехол для кота в подарок!</p>
         </div>
       </div>
     </section>
@@ -208,7 +208,7 @@
         <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="subscribe__label" for="subscribe-email" hidden>Email</label>
           <input class="subscribe__input" type="email" name="subscribe-email" id="subscribe-email" placeholder="кuklachev@gmail.com" required>
-          <button class="button newsletter-button" type="submit">Подписаться</button>
+          <button class="button newsletter-button button-primary" type="submit">Подписаться</button>
         </form>
       </div>
     </section>
