--- a/source/index.html
+++ b/source/index.html
@@ -75,16 +75,16 @@
         <h2 class="advantages__title">Как это работает</h2>
         <ul class="advantages__list">
           <li class="advantages__item advantages__item--background advantages__item--block-1">
-            <p class="advantages_-description">Функциональное питание содержит только полезные питательные вещества.</p>
+            <p class="advantages__description">Функциональное питание содержит только полезные питательные вещества.</p>
           </li>
           <li class="advantages__item advantages__item--background advantages__item--block-2">
-            <p class="advantages_-description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+            <p class="advantages__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
           </li>
           <li class="advantages__item advantages__item--background advantages__item--block-3">
-            <p class="advantages_-description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+            <p class="advantages__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
           </li>
           <li class="advantages__item advantages__item--background advantages__item--block-4">
-            <p class="advantages_-description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            <p class="advantages__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
           </li>
         </ul>
       </div>
