--- a/source/index.html
+++ b/source/index.html
@@ -23,13 +23,12 @@
           <img class="main-header__logo-picture" src="images/logo/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
         </picture>
         <picture>
-          <source width="118" height="21" type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo/logo-text-desktop.svg">
-          <source width="101" height="18" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo/logo-text-tablet.svg">
-          <img class="main-header__logo-name" src="images/logo/logo-text-mobile.svg" width="101" height="18" alt="Cat Energy">
+          <source width="118" height="21" type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo/logo-text.svg">
+          <img class="main-header__logo-name" src="images/logo/logo-text.svg" width="101" height="18" alt="Cat Energy">
         </picture>
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">
+        <button class="main-nav__toggle main-nav__toggle--close" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <ul class="main-nav__list">
@@ -139,7 +138,9 @@
   </main>
   <footer class="main-footer">
     <div class="main-footer__wrapper">
-      <a class="logo" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span></a>
+      <a class="logo" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span>
+        <img class="main-footer__logo-name" src="images/logo/logo-text.svg" width="128" height="24" alt="Cat Energy">
+      </a>
       <ul class="main-footer-list">
         <li class="main-footer__item">
           <a class="main-footer__link main-footer__link--vkontakte" href="https://vk.com/htmlacademy">
@@ -155,7 +156,7 @@
         </li>
       </ul>
       <a class="htmlacademy-link" href="https://htmlacademy.ru/intensive/adaptive">
-        <span>«HTML Academy»</span>
+        <span>HTML Academy</span>
       </a>
     </div>
   </footer>
