Добавляет адаптивную сетку

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,6 +51,8 @@
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-chicken500-tablet@1x.png 1x, images/products/card-chicken500-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-chicken500-mobile@1x.png" srcset="images/products/card-chicken500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 500 г со вкусом курицы">
               </picture>
+            </a>
+            <a class="catalog__link" href="#">
               <h3 class="catalog__caption">Cat Energy PRO 500 г</h3>
             </a>
             <ul class="catalog__list-info">
@@ -67,6 +69,8 @@
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-chicken1000-tablet@1x.png 1x, images/products/card-chicken1000-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-chicken1000-mobile@1x.png" srcset="images/products/card-chicken1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 1000 г со вкусом курицы">
               </picture>
+            </a>
+            <a class="catalog__link" href="#">
               <h3 class="catalog__caption">Cat Energy PRO 1000 г</h3>
             </a>
             <ul class="catalog__list-info">
@@ -83,6 +87,8 @@
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-fish500-tablet@1x.png 1x, images/products/card-fish500-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-fish500-mobile@1x.png" srcset="images/products/card-fish500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 500 г со вкусом рыбы">
               </picture>
+            </a>
+            <a class="catalog__link" href="#">
               <h3 class="catalog__caption">Cat Energy PRO 500 г</h3>
             </a>
             <ul class="catalog__list-info">
@@ -99,6 +105,8 @@
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-fish1000-tablet@1x.png 1x, images/products/card-fish1000-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-fish1000-mobile@1x.png" srcset="images/products/card-fish1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 1000 г со вкусом рыбы">
               </picture>
+            </a>
+            <a class="catalog__link" href="#">
               <h3 class="catalog__caption">Cat Energy PRO 1000 г</h3>
             </a>
             <ul class="catalog__list-info">
@@ -115,6 +123,8 @@
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-buckwheat500-tablet@1x.png 1x, images/products/card-buckwheat500-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-buckwheat500-mobile@1x.png" srcset="images/products/card-buckwheat500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy SLIM 500 г со вкусом гречки">
               </picture>
+            </a>
+            <a class="catalog__link" href="#">
               <h3 class="catalog__caption">Cat Energy SLIM 500 г</h3>
             </a>
             <ul class="catalog__list-info">
@@ -131,6 +141,8 @@
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-buckwheat1000-tablet@1x.png 1x, images/products/card-buckwheat1000-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-buckwheat1000-mobile@1x.png" srcset="images/products/card-buckwheat1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy SLIM 1000 г со вкусом гречки">
               </picture>
+            </a>
+            <a class="catalog__link" href="#">
               <h3 class="catalog__caption">Cat Energy SLIM 1000 г</h3>
             </a>
             <ul class="catalog__list-info">
@@ -147,6 +159,8 @@
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-rice500-tablet@1x.png 1x, images/products/card-rice500-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-rice500-mobile@1x.png" srcset="images/products/card-rice500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy SLIM 500 г со вкусом риса">
               </picture>
+            </a>
+            <a class="catalog__link" href="#">
               <h3 class="catalog__caption">Cat Energy PRO 500 г</h3>
             </a>
             <ul class="catalog__list-info">
@@ -158,7 +172,7 @@
           </li>
           <li class="catalog__item catalog__item--more">
             <a class="catalog__link" href="#">
-              <h3 class="catalog__caption">Показать еще 100500 товаров</h3>
+              <h3 class="catalog__caption-more">Показать еще 100500 товаров</h3>
             </a>
             <p class="catalog__text">На самом деле вкусов гораздо больше!</p>
             <a class="catalog__button button button-secondary" href="#">Показать все</a>
@@ -167,25 +181,22 @@
       </div>
     </section>
     <section class="catalog-additionally">
+      <h2 class="catalog-additionally__title">Дополнительные товары</h2>
       <div class="catalog-additionally__wrapper">
-        <h2 class="catalog-additionally__title">Дополнительные товары</h2>
         <ul class="catalog-additionally__list">
           <li class="catalog-additionally__item">
             <h3 class="catalog-additionally__caption">Сахарозаменитель</h3>
-            <p class="catalog-additionally__text">1 упаковка (100 г)</p>
-            <p class="catalog-additionally__text">200 ₽</p>
+            <p class="catalog-additionally__text">1 упаковка (100 г) <span>200 ₽</span></p>
             <a class="catalog-additionally__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog-additionally__item">
             <h3 class="catalog-additionally__caption">Питьевая вода</h3>
-            <p class="catalog-additionally__text">5 литров</p>
-            <p class="catalog-additionally__text">50 ₽</p>
+            <p class="catalog-additionally__text">5 литров <span>50 ₽</span></p>
             <a class="catalog-additionally__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog-additionally__item">
             <h3 class="catalog-additionally__caption">Молоко</h3>
-            <p class="catalog-additionally__text">1 литр</p>
-            <p class="catalog-additionally__text">100 ₽</p>
+            <p class="catalog-additionally__text">1 литр <span>100 ₽</span></p>
             <a class="catalog-additionally__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog-additionally__item">
