--- a/source/index.html
+++ b/source/index.html
@@ -45,7 +45,7 @@
       <div class="promo__wrapper">
         <h2 class="promo__title">Функциональное питание для котов</h2>
         <p class="promo__slogan">Занялся собой? Займись котом!</p>
-        <picture>
+        <picture class="promo__image-wrapper">
           <source width="552" height="499" type="image/png" media="(min-width: 1440px)" srcset="images/promo-desktop@1x.png 1x, images/promo-desktop@2x.png 2x">
           <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="images/promo-tablet@1x.png 1x, images/promo-tablet@2x.png 2x">
           <img class="promo__image" src="images/promo-mobile@1x.png" srcset="images/promo-mobile@2x.png 2x" width="280" height="270" alt="Оранжевая банка с питанием Cat Energy Pro со вкусом курицы">
@@ -103,7 +103,7 @@
               <dd class="example__text">Затрачено времени</dd>
             </div>
           </dl>
-          <p class="example__comment">Затраты на питание: 15 000 руб.</p>
+          <p class="example__comment">Затраты на питание: <span class="example__comment-number">15 000 руб.</span></p>
         </div>
         <div class="example__slider">
           <picture>
@@ -123,9 +123,9 @@
     <section class="contacts map">
       <div class="contacts__wrapper">
         <h2 class="visually-hidden">Контакты</h2>
-        <p class="contacts__description">Приглашаем к сотрудничеству дилеров!</p>
-        <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8</p>
-        <p class="contacts__adress">Санкт-Петербург</p>
+        <p class="contacts__description">Приглашаем<br>к сотрудничеству дилеров!</p>
+        <p class="contacts__adress contacts__adress--street">ул. Большая Конюшенная, д. 19/8</p>
+        <p class="contacts__adress contacts__adress--city">Санкт-Петербург</p>
       </div>
       <div class="map__wrapper">
         <picture>
