--- a/source/catalog.html
+++ b/source/catalog.html
@@ -52,7 +52,7 @@
                 <img class="catalog__image" src="images/products/card-chicken500-mobile@1x.png" srcset="images/products/card-chicken500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 500 г со вкусом курицы">
               </picture>
             </a>
-            <a class="catalog__link" href="#">
+            <a class="catalog__link-caption" href="#">
               <h3 class="catalog__caption">Cat Energy PRO 500 г</h3>
             </a>
             <ul class="catalog__list-info">
@@ -70,7 +70,7 @@
                 <img class="catalog__image" src="images/products/card-chicken1000-mobile@1x.png" srcset="images/products/card-chicken1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 1000 г со вкусом курицы">
               </picture>
             </a>
-            <a class="catalog__link" href="#">
+            <a class="catalog__link-caption" href="#">
               <h3 class="catalog__caption">Cat Energy PRO 1000 г</h3>
             </a>
             <ul class="catalog__list-info">
@@ -88,7 +88,7 @@
                 <img class="catalog__image" src="images/products/card-fish500-mobile@1x.png" srcset="images/products/card-fish500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 500 г со вкусом рыбы">
               </picture>
             </a>
-            <a class="catalog__link" href="#">
+            <a class="catalog__link-caption" href="#">
               <h3 class="catalog__caption">Cat Energy PRO 500 г</h3>
             </a>
             <ul class="catalog__list-info">
@@ -106,7 +106,7 @@
                 <img class="catalog__image" src="images/products/card-fish1000-mobile@1x.png" srcset="images/products/card-fish1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 1000 г со вкусом рыбы">
               </picture>
             </a>
-            <a class="catalog__link" href="#">
+            <a class="catalog__link-caption" href="#">
               <h3 class="catalog__caption">Cat Energy PRO 1000 г</h3>
             </a>
             <ul class="catalog__list-info">
@@ -124,7 +124,7 @@
                 <img class="catalog__image" src="images/products/card-buckwheat500-mobile@1x.png" srcset="images/products/card-buckwheat500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy SLIM 500 г со вкусом гречки">
               </picture>
             </a>
-            <a class="catalog__link" href="#">
+            <a class="catalog__link-caption" href="#">
               <h3 class="catalog__caption">Cat Energy SLIM 500 г</h3>
             </a>
             <ul class="catalog__list-info">
@@ -142,7 +142,7 @@
                 <img class="catalog__image" src="images/products/card-buckwheat1000-mobile@1x.png" srcset="images/products/card-buckwheat1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy SLIM 1000 г со вкусом гречки">
               </picture>
             </a>
-            <a class="catalog__link" href="#">
+            <a class="catalog__link-caption" href="#">
               <h3 class="catalog__caption">Cat Energy SLIM 1000 г</h3>
             </a>
             <ul class="catalog__list-info">
@@ -160,7 +160,7 @@
                 <img class="catalog__image" src="images/products/card-rice500-mobile@1x.png" srcset="images/products/card-rice500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy SLIM 500 г со вкусом риса">
               </picture>
             </a>
-            <a class="catalog__link" href="#">
+            <a class="catalog__link-caption" href="#">
               <h3 class="catalog__caption">Cat Energy PRO 500 г</h3>
             </a>
             <ul class="catalog__list-info">
@@ -171,7 +171,7 @@
             <a class="catalog__button button-primary" href="#">Заказать</a>
           </li>
           <li class="catalog__item catalog__item--more">
-            <a class="catalog__link" href="#">
+            <a class="catalog__link-caption" href="#">
               <h3 class="catalog__caption-more">Показать еще 100500 товаров</h3>
             </a>
             <p class="catalog__text">На самом деле вкусов гораздо больше!</p>
